tests/machine/x/hs/cross_join.error

tests/machine/x/hs/cross_join.hs:183:258: error:
    • Couldn't match type ‘AnyValue’ with ‘[Char]’
      Expected: Map.Map String String
        Actual: Map.Map String AnyValue
    • In the second argument of ‘Map.lookup’, namely ‘c’
      In the second argument of ‘fromMaybe’, namely
        ‘(Map.lookup "name" c)’
      In the first argument of ‘VString’, namely
        ‘(fromMaybe (error "missing") (Map.lookup "name" c))’
    |
183 | result = [Map.fromList [("orderId", VInt (fromMaybe (error "missing") (Map.lookup "id" o))), ("orderCustomerId", VInt (fromMaybe (error "missing") (Map.lookup "customerId" o))), ("pairedCustomerName", VString (fromMaybe (error "missing") (Map.lookup "name" c))), ("orderTotal", VInt (fromMaybe (error "missing") (Map.lookup "total" o)))] | o <- orders, c <- customers]
    |                                                                                                                                                                                                                                                                  ^
